--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,29 @@
     background-size: cover;
     color: rgb(235, 228, 228);
     text-align: center;
-    padding-top: 3%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .landing h1 {
     padding: 2px;
     margin: 5px;
+}
+
+bg-text {
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    text-align: center;
+    font-size: large;
+    padding-bottom: 30px;
+    padding-top: 40px;
 }
