--- a/css/styles.css
+++ b/css/styles.css
@@ -31,3 +31,38 @@ bg-text {
     padding-bottom: 30px;
     padding-top: 40px;
 }
+
+.image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.pname {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center
+}
+
+.container:hover .image {
+    opacity: 0.3;
+}
+
+.container:hover .pname {
+    opacity: 1;
+}
+
+.text {
+    background-color: rgb(172, 105, 189);
+    color: white;
+    font-size: 16px;
+    padding: 10px 10px;
+}
