--- a/css/styles.css
+++ b/css/styles.css
@@ -1,68 +1,76 @@
-.landing {
-    background-image: url('../img/landing.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: rgb(235, 228, 228);
-    text-align: center;
-    padding-top: 5%;
-    padding-bottom: 5%;
-}
-
-.landing h1 {
-    padding: 2px;
-    margin: 5px;
-}
-
-bg-text {
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    color: white;
-    font-weight: bold;
-    border: 3px solid #f1f1f1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 80%;
-    text-align: center;
-    font-size: large;
-    padding-bottom: 30px;
-    padding-top: 40px;
-}
-
-.image {
-    opacity: 1;
-    display: block;
-    width: 100%;
-    height: auto;
-    transition: .5s ease;
-    backface-visibility: hidden;
-}
-
-.pname {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center
-}
-
-.container:hover .image {
-    opacity: 0.3;
-}
-
-.container:hover .pname {
-    opacity: 1;
-}
-
-.text {
-    background-color: rgb(172, 105, 189);
-    color: white;
-    font-size: 16px;
-    padding: 10px 10px;
-}
+    .landing {
+        background-image: url('../img/landing.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: rgb(12, 0, 0);
+        text-align: center;
+        padding-top: 5%;
+        padding-bottom: 5%;
+    }
+    
+    .landing h1 {
+        padding: 2px;
+        margin: 5px;
+    }
+    
+    .bg-text {
+        background-color: rgb(255, 249, 249);
+        color: rgb(3, 0, 0);
+        font-weight: bold;
+        border: 3px solid #ffffff;
+        text-align: center;
+        font-size: large;
+        font-weight: bold;
+    }
+    
+    .image {
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: .5s ease;
+        backface-visibility: hidden;
+    }
+    
+    .pname {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center
+    }
+    
+    .container:hover .pname {
+        opacity: 1;
+    }
+    
+    .text {
+        background-color: rgb(255, 254, 255);
+        color: white;
+        font-size: 16px;
+        padding: 10px 10px;
+    }
+    
+    .contact {
+        background-image: url('../img/backg.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        font-size: x-large;
+        padding-top: 5%;
+        padding-bottom: 5%;
+    }
+    
+    .about-us {
+        background-color: white;
+    }
+    
+    h2 {
+        text-align: center;
+    }
