--- a/css/styles.css
+++ b/css/styles.css
@@ -24,30 +24,6 @@
         font-weight: bold;
     }
     
-    .image {
-        opacity: 1;
-        display: block;
-        width: 100%;
-        height: auto;
-        transition: .5s ease;
-        backface-visibility: hidden;
-    }
-    
-    .pname {
-        transition: .5s ease;
-        opacity: 0;
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        text-align: center
-    }
-    
-    .container:hover .pname {
-        opacity: 1;
-    }
-    
     .text {
         background-color: rgb(255, 254, 255);
         color: white;
@@ -72,5 +48,9 @@
     }
     
     h2 {
+        text-align: center;
+    }
+    
+    .order h2 {
         text-align: center;
     }
