--- a/css/styles.css
+++ b/css/styles.css
@@ -54,3 +54,43 @@
     .order h2 {
         text-align: center;
     }
+    
+    .order-overlay {
+        background-color: rgba(255, 254, 254, 0.8);
+        margin-left: 2%;
+        margin-right: 2%;
+        padding-bottom: 20px;
+        padding-left: 6%;
+    }
+    
+    .choice {
+        display: none;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+    
+    .deliver {
+        display: none;
+    }
+    
+    .delivery {
+        display: none;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    
+    td,
+    th {
+        font-size: 20px;
+        color: white;
+    }
+    
+    .choice h2 {
+        color: orange;
+        text-align: left;
+    }
+    
+    #your-orders {
+        color: white;
+        font-size: 30px;
+    }
